--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,3 +6,13 @@ spring.datasource.password=123456
 
 #mybatis
 mybatis.mapper-locations=classpath:/mapper/*.xml
+
+#静态资源
+#spring.resources.static-locations=classpath:/static
+spring.mvc.static-path-pattern=/static/**
+
+
+
+
+#资源映射地址为file:D://imgs/，这是我图片的路径，修改成你的图片存放的真实路径
+spring.resources.static-locations=file:D://biye/
